--- a/index.html
+++ b/index.html
@@ -272,10 +272,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/supabase-config.js"></script>
-    <script>
-      // Initialize Supabase client
-      const supabase = initSupabase();
+    <script type="module">
+       import { initSupabase } from './js/supabase-config.js';
 
+  // Initialize Supabase client
+  const supabase = initSupabase();
+    </script>
+    <script>
       // App state
       let currentCategory = "all";
       let currentPricing = null;
