--- a/index.html
+++ b/index.html
@@ -270,18 +270,11 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module">
-      import { createClient } from "@supabase/supabase-js";
-
-      // Initialize Supabase client
-      const supabase = createClient(
-        import.meta.env.VITE_SUPABASE_URL,
-        import.meta.env.VITE_SUPABASE_ANON_KEY
-      );
-
-      window.supabase = supabase; // Make available globally
-    </script>
+    <script src="js/supabase-config.js"></script>
     <script>
+      // Initialize Supabase client
+      const supabase = initSupabase();
+
       // App state
       let currentCategory = "all";
       let currentPricing = null;
