--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/supabase-config.js"></script>
+    <script src="/supabase-config.js"></script>
     <script>
       // Initialize Supabase client
       const supabase = initSupabase();
