--- a/index.html
+++ b/index.html
@@ -270,24 +270,11 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module">
+    <script type="module" src="./js/supabase-config.js">
       import { initSupabase } from "./js/supabase-config.js";
-
-      const supabase = initSupabase();
-
-      async function testSupabase() {
-        try {
-          const { data, error } = await supabase.from("apps").select("*");
-          if (error) throw error;
-          console.log("Apps Data:", data);
-        } catch (err) {
-          console.error("Error fetching apps:", err.message);
-        }
-      }
-
-      testSupabase();
     </script>
     <script>
+      const supabase = initSupabase();
       // App state
       let currentCategory = "all";
       let currentPricing = null;
