--- a/index.html
+++ b/index.html
@@ -270,9 +270,19 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./js/supabase-config.js">
+    <script type="module">
       import { initSupabase } from "./js/supabase-config.js";
       const supabase = initSupabase();
+
+      // Initialize Supabase and load apps
+  const { supabase, loadApps } = initSupabase();
+
+  // Ensure apps are loaded after DOM is ready
+  document.addEventListener("DOMContentLoaded", async () => {
+    await loadApps(); // Call loadApps after Supabase is initialized
+    updateFavoritesList(); // Ensure favorites are updated
+    checkFirstVisit(); // Check if it's the user's first visit
+  });
     </script>
     <script>
       // App state
