--- a/index.html
+++ b/index.html
@@ -270,37 +270,38 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./js/supabase-config.js">
+    <script type="module" src="./js/supabase-config.js"></script>
+    <script type="module">
       import { initSupabase } from "./js/supabase-config.js";
 
       // Initialize Supabase and load apps
-  const supabase = initSupabase();
+      const supabase = initSupabase();
 
       // Add this after Supabase initialization
-  async function loadApps() {
-    try {
-      console.log("Attempting to load apps...");
-      const { data, error } = await supabase.from("apps").select("*");
+      async function loadApps() {
+        try {
+          console.log("Attempting to load apps...");
+          const { data, error } = await supabase.from("apps").select("*");
 
-      if (error) {
-        console.error("Error loading apps:", error);
-        return;
+          if (error) {
+            console.error("Error loading apps:", error);
+            return;
+          }
+
+          console.log("Apps loaded:", data);
+
+          if (data && data.length > 0) {
+            apps = data;
+            filterApps();
+          } else {
+            console.log("No apps found in database");
+            showNoAppsMessage();
+          }
+        } catch (error) {
+          console.error("Failed to load apps:", error);
+          showErrorMessage("Failed to load apps");
+        }
       }
-
-      console.log("Apps loaded:", data);
-
-      if (data && data.length > 0) {
-        apps = data;
-        filterApps();
-      } else {
-        console.log("No apps found in database");
-        showNoAppsMessage();
-      }
-    } catch (error) {
-      console.error("Failed to load apps:", error);
-      showErrorMessage("Failed to load apps");
-    }
-  }
 
   // Ensure apps are loaded after DOM is ready
   document.addEventListener("DOMContentLoaded", async () => {
