--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   </head>
   <body>
     <!-- Navbar -->
@@ -271,38 +270,45 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./js/supabase-config.js">
-  import { initSupabase } from "./js/supabase-config.js";
-  
-  // Global variables
-  let apps = [];
-  const supabase = initSupabase();
-  
-  // Load apps function
-  async function loadApps() {
-    try {
-      const data = await supabase.queries.getAllApps();
-      if (data && data.length > 0) {
-        apps = data;
-        filterApps();
-      } else {
-        showNoAppsMessage();
-      }
-    } catch (error) {
-      console.error("Failed to load apps:", error);
-      showErrorMessage("Failed to load apps");
-    }
-  }
+    <script type="module" src="./js/supabase-config.js"></script>
+    <script type="module">
+      import { initSupabase } from "./js/supabase-config.js";
 
-  // Initialize after DOM is ready
-  document.addEventListener('DOMContentLoaded', async () => {
-    try {
-      await loadApps();
-      updateFavoritesList();
-      checkFirstVisit();
-    } catch (error) {
-      console.error("Initialization error:", error);
-    }
+      // Initialize Supabase and load apps
+      const supabase = initSupabase();
+
+      // Add this after Supabase initialization
+      async function loadApps() {
+        try {
+          console.log("Attempting to load apps...");
+          const { data, error } = await supabase.from("apps").select("*");
+
+          if (error) {
+            console.error("Error loading apps:", error);
+            return;
+          }
+
+          console.log("Apps loaded:", data);
+
+          if (data && data.length > 0) {
+            apps = data;
+            filterApps();
+          } else {
+            console.log("No apps found in database");
+            showNoAppsMessage();
+          }
+        } catch (error) {
+          console.error("Failed to load apps:", error);
+          showErrorMessage("Failed to load apps");
+        }
+      }
+
+  // Ensure apps are loaded after DOM is ready
+  document.addEventListener("DOMContentLoaded", async () => {
+    const apps = await loadApps(); // Call loadApps after Supabase is initialized
+    console.log(apps);
+    updateFavoritesList(); // Ensure favorites are updated
+    checkFirstVisit(); // Check if it's the user's first visit
   });
     </script>
     <script>
@@ -310,6 +316,7 @@
       let currentCategory = "all";
       let currentPricing = null;
       let favorites = JSON.parse(localStorage.getItem("favorites")) || [];
+      let apps = [];
 
       // DOM Elements
       const searchInput = document.getElementById("searchInput");
