--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./js/supabase-config.js">
-      import { initSupabase } from "./js/supabase-config.js";
+    <script type="module">
+  import { initSupabase } from "./js/supabase-config.js";
 
       // Initialize Supabase and load apps
       const supabase = initSupabase();
