--- a/index.html
+++ b/index.html
@@ -270,39 +270,45 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module">
-   import { initSupabase } from "./js/supabase-config.js";
-      // Initialize Supabase and load apps
-  const supabase = initSupabase();
+    <script type="module" src="./js/supabase-config.js">
+          import { initSupabase } from "./js/supabase-config.js";
 
-  async function loadApps() {
-    try {
-      console.log("Attempting to load apps...");
-      const { data, error } = await supabase.from("apps").select("*");
+          // Initialize Supabase and load apps
+          const supabase = initSupabase();
 
-      if (error) {
-        console.error("Error loading apps:", error);
-        return;
-      }
+          // Add this after Supabase initialization
+          async function loadApps() {
+            try {
+              console.log("Attempting to load apps...");
+              const { data, error } = await supabase.from("apps").select("*");
 
-      console.log("Apps loaded:", data);
+              if (error) {
+                console.error("Error loading apps:", error);
+                return;
+              }
 
-      if (data && data.length > 0) {
-        console.log("Apps available:", data);
-      } else {
-        console.log("No apps found in database");
-      }
-    } catch (error) {
-      console.error("Failed to load apps:", error);
-    }
-  }
+              console.log("Apps loaded:", data);
 
-  // Ensure apps are loaded after DOM is ready
-  document.addEventListener("DOMContentLoaded", async () => {
-    loadApps();
-    updateFavoritesList(); // Ensure favorites are updated
-    checkFirstVisit(); // Check if it's the user's first visit
-  });
+              if (data && data.length > 0) {
+                apps = data;
+                filterApps();
+              } else {
+                console.log("No apps found in database");
+                showNoAppsMessage();
+              }
+            } catch (error) {
+              console.error("Failed to load apps:", error);
+              showErrorMessage("Failed to load apps");
+            }
+          }
+
+      // Ensure apps are loaded after DOM is ready
+      document.addEventListener("DOMContentLoaded", async () => {
+        const apps = await loadApps(); // Call loadApps after Supabase is initialized
+        console.log(apps);
+        updateFavoritesList(); // Ensure favorites are updated
+        checkFirstVisit(); // Check if it's the user's first visit
+      });
     </script>
     <script>
       // App state
