--- a/index.html
+++ b/index.html
@@ -270,37 +270,35 @@
 
     <!-- Required Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./js/supabase-config.js">
-          import { initSupabase } from "./js/supabase-config.js";
+    <script type="module">
+      import { initSupabase } from "./js/supabase-config.js";
+      window.supabase = initSupabase();
 
-          // Initialize Supabase and load apps
-          const supabase = initSupabase();
+      // Add this after Supabase initialization
+      async function loadApps() {
+        try {
+          console.log("Attempting to load apps...");
+          const { data, error } = await supabase.from("apps").select("*");
 
-          // Add this after Supabase initialization
-          async function loadApps() {
-            try {
-              console.log("Attempting to load apps...");
-              const { data, error } = await supabase.from("apps").select("*");
-
-              if (error) {
-                console.error("Error loading apps:", error);
-                return;
-              }
-
-              console.log("Apps loaded:", data);
-
-              if (data && data.length > 0) {
-                apps = data;
-                filterApps();
-              } else {
-                console.log("No apps found in database");
-                showNoAppsMessage();
-              }
-            } catch (error) {
-              console.error("Failed to load apps:", error);
-              showErrorMessage("Failed to load apps");
-            }
+          if (error) {
+            console.error("Error loading apps:", error);
+            return;
           }
+
+          console.log("Apps loaded:", data);
+
+          if (data && data.length > 0) {
+            apps = data;
+            filterApps();
+          } else {
+            console.log("No apps found in database");
+            showNoAppsMessage();
+          }
+        } catch (error) {
+          console.error("Failed to load apps:", error);
+          showErrorMessage("Failed to load apps");
+        }
+      }
 
       // Ensure apps are loaded after DOM is ready
       document.addEventListener("DOMContentLoaded", async () => {
@@ -333,10 +331,6 @@
 
       // Event Listeners
       document.addEventListener("DOMContentLoaded", async () => {
-        await loadApps();
-        updateFavoritesList();
-        checkFirstVisit();
-
         // Initialize all tooltips
         const tooltipTriggerList = [].slice.call(
           document.querySelectorAll('[data-bs-toggle="tooltip"]')
@@ -412,22 +406,6 @@
       document
         .getElementById("feedbackForm")
         .addEventListener("submit", handleFeedbackSubmit);
-
-      // Functions
-
-      async function loadApps() {
-        try {
-          const { data, error } = await supabase.from("apps").select("*");
-
-          if (error) throw error;
-
-          apps = data;
-          filterApps();
-        } catch (error) {
-          console.error("Error loading apps:", error);
-          showErrorMessage("Failed to load apps");
-        }
-      }
 
       function filterApps() {
         let filteredApps = [...apps];
@@ -700,17 +678,6 @@
           });
         }
       });
-
-      // Fungsi untuk menutup favorites dropdown
-      // function closeFavoritesDropdown(event) {
-      //   if (
-      //     !favoritesDropdown.contains(event.target) &&
-      //     !event.target.closest(".btn-favorite")
-      //   ) {
-      //     favoritesDropdown.classList.remove("show");
-      //     document.removeEventListener("click", closeFavoritesDropdown);
-      //   }
-      // }
 
       // Fungsi untuk menangani toggle sidebar yang diperbaiki
       function toggleSidebar() {
